--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,10 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+      <h1 class="mt-5">OMG you will not believe it but...</h1>
+      <h2 id="excuse">the dog ate my homework</h2>
+      <div class="fixed-bottom p-4"></div>
     </div>
+    <script type="text/javascript" src="bundle/bundle.js"></script>
   </body>
 </html>
